<resources>
    <string name="app_name">Today</string>
    <string name="course_app">Course App</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>

    <string name="register">Register</string>
    <string name="send">Send</string>
    <string name="register_form">Register Form</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
</resources>