<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Teacher">


    <Space
        android:layout_width="match_parent"
        android:layout_height="54dp" />

    <TextView
        android:id="@+id/textViewTeacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp" />


    <EditText
        android:id="@+id/etSubjectTeacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="17dp"
        android:ems="10"
        android:hint="@string/subject"
        android:inputType="textPersonName" />
    <EditText
        android:id="@+id/etSendMailTeacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="17dp"
        android:ems="10"
        android:hint="@string/message"
        android:inputType="textPersonName" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="66dp">

        <Button
            android:id="@+id/btnSendMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.666" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>